Revert "[BUG-1664] Resolve Meshery logo spacing and alignment issue"
This reverts commit 2a92d99ace4a1f4a29ab6c50d610a00aee66bc99.

--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -21,7 +21,6 @@ nav {
 	display: flex;
 	flex-direction: row;
 	padding: 0 2vw;
-	align-items: center;
 	justify-content: space-between;
 }
 .stellarnav.desktop{
@@ -119,10 +118,14 @@ a.nav-text:hover {
 			border-top: 6px solid;
 		}
 	}
+	&:hover{
+	}
 }
+
 
 .stellarnav ul {
 	width:fit-content;
+	margin-top: 0.5rem;
 	& ul{
   	border-radius: 5px;
 	background-color: var(--color-secondary-light);
@@ -267,4 +270,16 @@ a.nav-text:hover {
 		gap: 5px;
 	}
 	
+}
+
+@media screen and (max-width: 1140px)  {
+	.project-name {
+		padding-top: 10px;
+	}
+}
+
+@media screen and (max-width: 839px) {
+    .nav-mode-icon {
+        padding-top: 10px;
+    }
 }
